--- a/app/views/path_list.ejs
+++ b/app/views/path_list.ejs
@@ -1,20 +1,108 @@
 <!DOCTYPE HTML>
 
+<% var MAX_ANNOTATIONS = 6 ; %>
+
 <html>
 <head>
     <meta charset="utf-8"/>
     <title>Tuned city</title>
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='/stylesheets/reset.css' />
+    
+    <style>
+    
+    .content{
+        margin:32px;
+    }
+    
+    h1{
+        font-size:34pt;
+        font-family:Oswald;
+    }
+    
+    .subtitle{
+        font-size:22pt;
+        font-family:Oswald;
+        color:#77db8f;
+    }
+    
+    .path_list_box{
+        margin-top:32px;
+    }
+    
+/*    ul.path_list li{
+        margin-top:12px;
+    }*/
+    
+    .path_item{
+        width:180px;
+        float:left;
+        margin:12px;
+        height:180px;
+        overflow:hidden;
+/*         border:1px solid; */
+    }
+    
+    .path_link{
+        text-decoration:none;
+        font-family:Oswald;
+        font-size:16pt;
+        color: black;
+    }
+    
+    .path_item:hover .path_link{
+        color: #FF4D00;
+    }
+    
+    .path_text{
+        margin-top:6px;
+    }
+    
+    .annotation{
+        font-family:serif;
+        font-style:italic;
+    }
+    
+    <% var annot_fs = 14 ; %>
+    <% for(var i=0; i < MAX_ANNOTATIONS; i++){ %>
+    <% var fs = (annot_fs * (MAX_ANNOTATIONS - i) / MAX_ANNOTATIONS); %>
+    .annot_<%= i %> {
+        font-size: <%= fs %>pt;
+    }
+    <% } %>
+    
+    </style>
+    
 </head>
 
 <body>
-
-    <ul>
-    <% for(var i=0; i<path_list.length; i++) {%>
-        <li><a href="/path/<%= path_list[i]._id %>"><%= path_list[i].title %></a> (<%= path_list[i].trackpoints.length %>)</li>
-    <% } %>
-    </ul>
+    <div class="content">
+        <h1>
+        Archive | Archief
+        </h1>
+        <div class="subtitle">
+        An archiving experiment towards digital sound spaces for Tuned City Brussels.
+        </div>
+        
+        <div class="path_list_box">
+<!--             <ul class="path_list"> -->
+            <% for(var i=0; i<path_list.length; i++) {%>
+                <div class="path_item">
+                    <a class="path_link" href="/path/<%= path_list[i]._id %>"><%= path_list[i].title %></a> 
+<!--                     (<%= path_list[i].trackpoints.length %>) -->
+                    <div class="path_text">
+                    <% var T = text[ path_list[i]._id ]; %>
+                    <% for(var tid in T){ if(tid >= MAX_ANNOTATIONS){break;} var t=T[tid]; %>
+                        <p class="annotation annot_<%= tid %>" >
+                        <%= t %>
+                        </p>
+                    <% } %>
+                    </div>
+                </div>
+            <% } %>
+<!--             </ul> -->
+        </div>
+    </div>
 
 
     <script src="../../app/public/js/lib/jquery.js"></script>
