--- a/app/views/path_detail.ejs
+++ b/app/views/path_detail.ejs
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <div id="logo">Tuned City Archive</div>
+<div id="logo">
+    Tuned City Archive<br /><a class="previous" href="/path/">liste</a>
+</div>
 
     <section id="path">
         <header>
