--- a/app/public/js/templates/Path.html
+++ b/app/public/js/templates/Path.html
@@ -1,6 +1,7 @@
 <!-- path -->
 
 <div class="path">
+    <div class="PathDelete" id="PathDelete_<%= data._id %>">&times; </div>
    <span class="path-title"  data-id="<%= data._id %>"> <%= data.title %> </span> 
    <span class="trackpoints"> <%= data.trackpoints.length %> </span>
 </div>
