File upload progress feedback on the form upload

--- a/app/public/js/templates/UploadMedia.html
+++ b/app/public/js/templates/UploadMedia.html
@@ -12,7 +12,8 @@
     <div class="label">
         Select a media file
     </div>
-    <input type="file" name="media" />
+    <input type="file" name="media" multiple="multiple" />
+    <div id="progress-list"></div>
 </div>
 
 <div class="buttons">
