--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -363,3 +363,18 @@ button {
         .widget-title;
     }
 }
+
+
+
+
+.progress-bar {
+    height: 10px;
+    border: 1px solid black;
+    position: relative;
+
+    .progress {
+        width: 0;
+        height: 10px;
+        background-color: red;
+    }
+}
